--- a/ukwiecona/css/main.css
+++ b/ukwiecona/css/main.css
@@ -9,6 +9,7 @@ sass/
 |
 |– components/
 |   |– _buttons.scss            # Przyciski
+|   |- _header-bar
 |   |– _carousel.scss           # Karuzela
 |   |– _cover.scss              # Okładka
 |   |– _dropdown.scss           # Rozwijane menu
@@ -33,6 +34,14 @@ sass/
 
 */
 /* Mixin for media query */
+/* Mixin for base font sizes for body */
+/* Mixin for typography vertical rhythm   
+(gridlover.com for example determines font
+sizes for headings and on this page:
+https://24ways.org/2006/compose-to-a-vertical-rhythm/)
+are guidelines for gaps between lines
+or line height*/
+/* Shadow box for elements */
 /* Font variables */
 /* Devices width for media query mixin */
 /* Grid vertical rhythm from GRIDLOVER - font size scale factor about 1,618 */
@@ -90,9 +99,55 @@ body {
   font-size: 18px;
 }
 
+@media (min-width: 1024px) {
+  body {
+    font-size: 36px;
+  }
+}
+
 @media (min-width: 1366px) {
   body {
     font-size: 36px;
   }
+}
+
+h1.header-bar {
+  font-family: "Marck Script", cursive;
+  font-size: 2em;
+  line-height: 2;
+}
+
+h1.tag {
+  font-family: "Marck Script", cursive;
+  font-size: 1em;
+  line-height: 1;
+}
+
+p {
+  font-family: "Play", sans-serif;
+  font-size: 1em;
+  line-height: 1;
+}
+
+h3 {
+  font-family: "Marck Script", cursive;
+}
+
+h2 {
+  font-family: "Play", sans-serif;
+  font-size: 1em;
+  line-height: 1;
+}
+
+h4 {
+  font-family: "Play", sans-serif;
+  font-size: 0.5em;
+  line-height: 0.5;
+}
+
+/*Shadowbox for*/
+div.header-bar {
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
 }
 /*# sourceMappingURL=main.css.map */
