--- a/ukwiecona/scss/utils/_mixins.scss
+++ b/ukwiecona/scss/utils/_mixins.scss
@@ -10,3 +10,36 @@
   }
 }
 
+/* Mixin for base font sizes for body */
+@mixin font-root {
+  $fontSize: 18px;
+  font-size: $fontSize;
+
+  @each $key, $value in $root-font-sizes {
+    @include rwd ($key) {
+      font-size: $value;
+    } 
+  }  
+}
+
+/* Mixin for typography vertical rhythm   
+(gridlover.com for example determines font
+sizes for headings and on this page:
+https://24ways.org/2006/compose-to-a-vertical-rhythm/)
+are guidelines for gaps between lines
+or line height*/
+@mixin vertical-rhythm ($fontSize) {
+  $lineHeight: $fontSize/1em;
+  
+  font-size: $fontSize;
+  line-height: $lineHeight;
+  $marginTop: 1.5*$lineHeight;
+  $marginBottom: 0.5*$lineHeight;
+} 
+
+/* Shadow box for elements */
+@mixin shadow{
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
+}
