--- a/ukwiecona/scss/main.scss
+++ b/ukwiecona/scss/main.scss
@@ -49,7 +49,10 @@ sass/
 
 @import
   "components/buttons",
-  "components/header-bars";
+  "components/header-bars",
+  "components/form";
 
 @import
-  "layout/section-header";
+  "layout/section-header",
+  "layout/section-services",
+  "layout/section-contact";
