--- a/ukwiecona/scss/base/_root.scss
+++ b/ukwiecona/scss/base/_root.scss
@@ -8,8 +8,8 @@ section {
     width: 100vw;
     overflow-x: hidden;
 
-    & >:not(.header-bar) {
-        margin-left: 2.5vw;
-        margin-right: 2.5vw;
-    }
+    //& >:not(.header-bar) {
+    //    margin-left: 2.5vw;
+    //    margin-right: 2.5vw;
+    //}
 }
